--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Inkeep MCP Server"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "fastapi[standard]>=0.115.12",
     "mcp[cli]>=1.3.0",
     "openai>=1.66.3",
     "pydantic-settings>=2.8.1",
